--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "description": "Experimenz OpenTeamSpace tooling",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx webpack"
   },
   "author": "goofballLogic",
   "license": "MIT",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "tc2-react-good-bad-tracker": "0.0.2",
     "tc2-react-time-series-graph": "0.0.12",
     "webpack": "^4.7.0",
