--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "experimenz.openteamspace.com",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Experimenz OpenTeamSpace tooling",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx webpack --watch",
     "build": "npx webpack"
   },
   "author": "goofballLogic",
