--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,15 @@
 {
 
     "presets": [ 
+
         "env",
         "react"
+    
+    ],
+    "plugins": [
+        
+        "react-hot-loader/babel"
+    
     ]
 
 }
