--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
-    "react-hot-loader": "^4.1.2",
-    "tc2-react-good-bad-tracker": "0.0.2",
-    "tc2-react-time-series-graph": "0.0.12",
     "webpack": "^4.7.0",
     "webpack-cli": "^2.1.2",
     "webpack-dev-server": "^3.1.4"
+  },
+  "dependencies": {
+    "css-loader": "^0.28.11",
+    "react-hot-loader": "^4.1.2",
+    "react-router-dom": "^4.2.2",
+    "react-svg-loader": "^2.1.0",
+    "style-loader": "^0.21.0",
+    "tc2-react-good-bad-tracker": "0.0.2",
+    "tc2-react-time-series-graph": "0.0.12"
   },
   "private": true
 }
