summary dashboard looking ok for team journey

--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   },
   "dependencies": {
     "css-loader": "^0.28.11",
+    "moment": "^2.22.1",
     "react-hot-loader": "^4.1.2",
     "react-router-dom": "^4.2.2",
     "react-svg-loader": "^2.1.0",
+    "recharts": "^1.0.0-beta.10",
     "style-loader": "^0.21.0",
     "tc2-react-good-bad-tracker": "0.0.2",
-    "tc2-react-time-series-graph": "0.0.12"
+    "tc2-react-time-series-graph": "0.0.13"
   },
   "private": true
 }
