--- a/.babelrc
+++ b/.babelrc
@@ -8,7 +8,8 @@
     ],
     "plugins": [
         
-        "react-hot-loader/babel"
+        "react-hot-loader/babel",
+        "transform-object-rest-spread"
     
     ]
 
