--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "experimenz.openteamspace.com",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "description": "Experimenz OpenTeamSpace tooling",
   "main": "index.js",
   "scripts": {
@@ -17,11 +17,14 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "webpack": "^4.7.0",
+    "webpack-bundle-size-analyzer": "^2.7.0",
     "webpack-cli": "^2.1.2",
     "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "css-loader": "^0.28.11",
+    "date-fns": "^1.29.0",
     "moment": "^2.22.1",
     "react-hot-loader": "^4.1.2",
     "react-router-dom": "^4.2.2",
