--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx webpack-dev-server",
+    "dev": "npx webpack-dev-server --hot",
     "build": "npx webpack --config webpack.production.config.js"
   },
   "author": "goofballLogic",
